src/objects/FS_Distributor_Type__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting is to list down the correct name of Distributor Types</description>
    <fields>
        <fullName>FS_C_C__c</fullName>
        <label>C&amp;C</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Direct__c</fullName>
        <label>Direct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Logist__c</fullName>
        <label>Logist</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Partner__c</fullName>
        <label>Partner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Slabco__c</fullName>
        <label>Slabco</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Strategic__c</fullName>
        <label>Strategic</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Distributor Type</label>
</CustomObject>